@@ -26,12 +26,15 @@
 #define HAVE_ERRNO_H 1
 #define HAVE_MMAP 1
 #define HAVE_MERGESORT 1
-#define HAVE_READLINE 1
 #define HAVE_SBRK 1
 #define HAVE_STRINGS_H 1
 #define HAVE_SYS_PARAM_H 1
 #define HAVE_SYS_TIME_H 1
 #define HAVE_SYS_TIMEB_H 1
+
+#if PLATFORM(MAC)
+#define HAVE_READLINE 1
+#endif
 
 #elif PLATFORM(WIN_OS)
 
